Fix for nav and footer stuck behind the leaves

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,11 +96,10 @@ a {
   font-weight: 800;
 }
 
-nav, footer {
-  /*background: #e8e6db;
-  */
-  background: rgba(215, 189, 152, 0.4);
-  z-index: 1000;
+nav , footer {
+  background: #e8e6db;
+  position: relative;
+  z-index: 10;
 }
 
 nav ul {
